objects/zkusps__ShippingPreference__c.object
<CustomObject>
    <customHelpPage>zkusps__PreferenceHelp</customHelpPage>
    <fields>
        <fullName>zkusps__AutoWeighPackage__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Auto Weigh Package using Scale</description>
        <inlineHelpText>Auto Weigh Package using Scale</inlineHelpText>
        <label>Auto Weigh Package</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zkusps__Convert_4x6_GIF_to_PDF__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Convert 4x6 GIF to PDF</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zkusps__DefaultImageResolution__c</fullName>
        <description>Used only for ZPLII and EPL labels. Default value is 203 dpi</description>
        <inlineHelpText>Used only for ZPLII and EPL labels. Default value is 203 dpi</inlineHelpText>
        <label>Default Image Resolution</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkusps__DetailedViewShipmatePreferenceList__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This option allows you to display more details in the drop down list when selecting the Shipmate Preference in the Shipping Wizard. This drop down list only appears on Preference Section of the Shipping Wizard if you have more than one Shipmate Preference.</description>
        <inlineHelpText>This option allows you to display more details in the drop down list when selecting the Shipmate Preference in the Shipping Wizard. This drop down list only appears on Preference Section of the Shipping Wizard if you have more than one Shipmate Preference</inlineHelpText>
        <label>Detailed View - Shipmate Preference List</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zkusps__DocPrinterId__c</fullName>
        <label>DocPrinterId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkusps__DocPrinterTray__c</fullName>
        <label>Doc Printer Tray</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkusps__EnableScales__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enable Scales</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zkusps__IncludeImageResolution__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Allows to include Image Resolution drop-down to Wizard page</description>
        <inlineHelpText>Allows to include Image Resolution drop-down to Wizard page</inlineHelpText>
        <label>Include Image Resolution</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zkusps__LabelImageRotationDefault__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Rotate label image 180 degrees. Only for labels in EPL2 and ZPLII format</description>
        <inlineHelpText>Rotate label image 180 degrees. Only for labels in EPL2 and ZPLII format</inlineHelpText>
        <label>Label Image Rotation Default</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zkusps__NonThermalPrinterId__c</fullName>
        <label>NonThermalPrinterId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkusps__NonThermalPrinterTray__c</fullName>
        <label>Non Thermal Printer Tray</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkusps__OrgWideAddress__c</fullName>
        <label>Org Wide Address</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkusps__ScaleComputerId__c</fullName>
        <label>Scale Computer Id</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkusps__ScaleDeviceId__c</fullName>
        <label>Scale Device Id</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkusps__ScaleName__c</fullName>
        <label>Scale Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkusps__ScaleWeightUnit__c</fullName>
        <label>Scale Weight Unit</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkusps__ThermalPrinterTray__c</fullName>
        <label>Thermal Printer Tray</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkusps__companyName__c</fullName>
        <label>Company Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkusps__emailLabelReplyToEmailDefault__c</fullName>
        <description>For completed Shipments, this will be the default reply-to email address when sending shipping labels via email</description>
        <inlineHelpText>For completed Shipments, this will be the default reply-to email address when sending shipping labels via email</inlineHelpText>
        <label>Email Label Reply-To Email Default</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>zkusps__emailLabelSenderDisplayNameDefault__c</fullName>
        <description>For completed Shipments, this will be the default sender display name when sending shipping labels via email</description>
        <inlineHelpText>For completed Shipments, this will be the default sender display name when sending shipping labels via email</inlineHelpText>
        <label>Email Label Sender Display Name Default</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkusps__emailLabelSubjectLineDefault__c</fullName>
        <description>For completed Shipments, this will be the default email subject line when sending shipping labels via email</description>
        <inlineHelpText>For completed Shipments, this will be the default email subject line when sending shipping labels via email</inlineHelpText>
        <label>Email Label Subject Line Default</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkusps__emailLabelTextBodyDefault__c</fullName>
        <description>For completed Shipments, this will be the default email body when sending shipping labels via email</description>
        <inlineHelpText>For completed Shipments, this will be the default email body when sending shipping labels via email</inlineHelpText>
        <label>Email Label Text Body Default</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>zkusps__labelImageTypeDefault__c</fullName>
        <label>Label Image Type Default</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkusps__preference__c</fullName>
        <label>Billing Preference</label>
        <referenceTo>zkusps__Preference__c</referenceTo>
        <relationshipName>Shipping_Preferences</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>zkusps__shippingCity__c</fullName>
        <label>Shipping City</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkusps__shippingPostalCode__c</fullName>
        <label>Shipping Postal Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkusps__shippingSenderEmailDefault__c</fullName>
        <description>Used to specify a default value for Sender Email. If not specified, the value for Sender Email will default to the User&apos;s email.</description>
        <inlineHelpText>Used to specify a default value for Sender Email. If not specified, the value for Sender Email will default to the User&apos;s email.</inlineHelpText>
        <label>Shipping Sender Email Default</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>zkusps__shippingSenderNameDefault__c</fullName>
        <description>Used to specify a default value for Sender Name. If not specified, the value for Sender Name will default to the User&apos;s Name.</description>
        <inlineHelpText>Used to specify a default value for Sender Name. If not specified, the value for Sender Name will default to the User&apos;s Name.</inlineHelpText>
        <label>Shipping Sender Name Default</label>
        <length>47</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkusps__shippingSenderPhoneDefault__c</fullName>
        <description>Used to specify a default value for Sender Phone. If not specified, the value for Sender Phone will default to the User&apos;s Phone Number. 10 digits required (including area code) with no punctuation.</description>
        <inlineHelpText>Used to specify a default value for Sender Phone. If not specified, the value for Sender Phone will default to the User&apos;s Phone Number. 10 digits required (including area code) with no punctuation.</inlineHelpText>
        <label>Shipping Sender Phone Default</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkusps__shippingState__c</fullName>
        <label>Shipping State</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkusps__shippingStreet__c</fullName>
        <label>Shipping Street</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>zkusps__thermalPrinterId__c</fullName>
        <label>Thermal Printer Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkusps__thermalPrinterName__c</fullName>
        <label>Thermal Printer Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkusps__thermalPrinterProvider__c</fullName>
        <label>Thermal Printer Provider</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Local</fullName>
                </value>
                <value>
                    <fullName>Print Node</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>zkusps__zkModKey__c</fullName>
        <label>ZK Mod Key</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>USPS Express1 Shipping Preference</label>
    <listViews>
        <fullName>zkusps__All</fullName>
        <columns>NAME</columns>
        <columns>zkusps__preference__c</columns>
        <columns>zkusps__companyName__c</columns>
        <columns>zkusps__shippingStreet__c</columns>
        <columns>zkusps__shippingCity__c</columns>
        <columns>zkusps__shippingState__c</columns>
        <columns>zkusps__shippingPostalCode__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>Shipping-Preference-{00000000}</displayFormat>
        <label>Shipping Preference Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>USPS Express1 Shipping Preferences</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>